<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.skunkapp</groupId>
  <artifactId>SkunkProject</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Skunk Game Application</name>
  <description>UST Project</description>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <testResources>
      <testResource>
        <directory>test</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
    </testResources>
    <pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-compiler-plugin</artifactId>
      	<version>${maven.compiler.plugin.version}</version>
      	<configuration>
        	<release>${java.version}</release>
    	</configuration>
      </plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.6.1</version>
		    <configuration>
		         <annotationProcessorPaths>
		              <path>
		                  <groupId>com.google.dagger</groupId>
		                  <artifactId>dagger-compiler</artifactId>
		                  <version>2.16</version>
		              </path>
		         </annotationProcessorPaths>
		    </configuration>
		</plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-surefire-plugin</artifactId>
      	<version>3.0.0-M3</version>
      </plugin>
      <plugin>
      	<groupId>org.eclipse.m2e</groupId>
      	<artifactId>lifecycle-mapping</artifactId>
      	<version>1.0.0</version>
      	<configuration>
			<lifecycleMappingMetadata>
				<pluginExecutions>
					<pluginExecution>
						<pluginExecutionFilter>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>aspectj-maven-plugin</artifactId>
							<versionRange>[1.0,)</versionRange>
							<goals>
								<goal>test-compile</goal>
								<goal>compile</goal>
							</goals>
						</pluginExecutionFilter>
						<action>
							<execute />
						</action>
					</pluginExecution>
					<pluginExecution>
						<pluginExecutionFilter>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>
								maven-install-plugin
							</artifactId>
							<versionRange>
								[2.5,)
							</versionRange>
							<goals>
								<goal>install-file</goal>
							</goals>
						</pluginExecutionFilter>
						<action>
							<execute>
								<runOnIncremental>false</runOnIncremental>
							</execute>
						</action>
					</pluginExecution>
				</pluginExecutions>
			</lifecycleMappingMetadata>
		</configuration>
      </plugin>
      <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-install-plugin</artifactId>
		    <version>2.5</version>
		    <executions>
		        <execution>
		        	<id>install:edu.princeton.cs.introcs</id>
		            <phase>initialize</phase>
		            <goals>
		                <goal>install-file</goal>
		            </goals>
		            <configuration>
					    <groupId>edu.princeton.cs.introcs</groupId>
					    <artifactId>stdlib-package</artifactId>
					    <version>1.0</version>
		                <packaging>jar</packaging>
		                <file>${basedir}/lib/stdlib-package.jar</file>
		            </configuration>
		        </execution>
		        <execution>
		        	<id>install:commons-text-1.6</id>
		        	<phase>initialize</phase>
		        	<goals>
		        		<goal>install-file</goal>
		        	</goals>
		        	<configuration>
		        		<groupId>org.apache.commons</groupId>
    					<artifactId>commons-text</artifactId>
    					<version>1.6</version>
						<packaging>jar</packaging>
		        		<file>${basedir}/lib/commons-text-1.6.jar</file>
		        	</configuration>
		        </execution>
		    </executions>
		</plugin>
		<plugin>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>0.7.1.201405082137</version>
		    <executions>
		        <execution>
		            <goals>
		                <goal>prepare-agent</goal>
		            </goals>
		            <configuration>
			   			<destFile>${buildDirectory}/coverage-reports/jacoco-unit.exec</destFile>
			   			<propertyName>surefireArgLine</propertyName>
					</configuration>
		        </execution>
		        <execution>
		            <id>report</id>
		            <phase>prepare-package</phase>
		            <goals>
		                <goal>test</goal>
		            </goals>
		            <configuration>
			   			<dataFile>${buildDirectory}/coverage-reports/jacoco-unit.exec</dataFile>
			   			<propertyName>surefireArgLine</propertyName>
					</configuration>
		        </execution>
    		</executions>
		</plugin>
    </plugins>
  	</pluginManagement>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>com.google.dagger</groupId>
  		<artifactId>dagger</artifactId>
  		<version>2.22</version>
  	</dependency>
  	<dependency>
  		<groupId>org.mapstruct</groupId>
  		<artifactId>mapstruct</artifactId>
  		<version>1.3.0.Final</version>
  	</dependency>
  	<dependency>
  		<groupId>javax.inject</groupId>
  		<artifactId>javax.inject</artifactId>
  		<version>1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.platform</groupId>
  		<artifactId>junit-platform-runner</artifactId>
  		<version>1.4.2</version>
  	</dependency>
  	<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.4.2</version>
        <scope>test</scope>
    </dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  		<version>5.4.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.mockito</groupId>
  		<artifactId>mockito-core</artifactId>
  		<version>2.27.0</version>
  	</dependency>
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-text</artifactId>
	    <version>1.6</version>
	</dependency>
	<dependency>
	    <groupId>edu.princeton.cs.introcs</groupId>
	    <artifactId>stdlib-package</artifactId>
	    <version>1.0</version>
	</dependency>
  </dependencies>
  <profiles>
  	<profile>
  	  <id>dev</id>
  	  <build>
  	  	<directory>${buildDirectory}</directory>
  	  </build>
  	</profile>
  	<profile>
  	  <id>prod</id>
  	</profile>
  </profiles>
  <properties>
    <buildDirectory>${basedir}/dist</buildDirectory>
    <java.version>11</java.version>
    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
  </properties>
</project>